tests/ui/parser/missing-fn-issue-65381-1.rs
main() {
//~^ ERROR missing `fn` for function definition
//~| HELP add `fn` here to parse `main` as a function
}
